tests/multiplatform_supports_platform/foo.js.flow
/**
 * @supportsPlatform android
 * @supportsPlatform windows
 */
// error: missing android
export const a = '';
